@@ -28,9 +28,18 @@ unzip jstorm-2.2.1.zip</br>
 export JSTORM_HOME=/opt/app/jstorm-2.2.1</br>
 export PATH=$JSTORM_HOME/bin:$PATH</br>
 source /etc/profile</br>
+修改配置文件 /opt/app/jstorm-2.2.1/conf/storm.yaml,在首行加入</br>
+<pre>
+nimbus.childopts: "-Xms512m -Xmx512m -Xmn768m -XX:SurvivorRatio=4 -XX:MaxTenuringThreshold=10 -XX:+UseConcMarkSweepGC  -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 -XX:+HeapDumpOnOutOfMemoryError -XX:CMSMaxAbortablePrecleanTime=5000"
+</pre>
+#mkdir ~/.jstorm  </br>
+#cp -f $JSTORM_HOME/conf/storm.yaml ~/.jstorm</br>
 nohup jstorm nimbus &  </br>
 nohup jstorm supervisor & </br>
 /opt/app/jstorm-2.2.1/logs看有没有日志</br>
 启动成功</br>
 </br>
 </br>
+发布</br>
+把git工程打成war包</br>
+jstorm jar jstorm-core-2.2.1.jar com.github.yt.test.jstorm.sample.topology.Main</br>
